--- a/src/app.html
+++ b/src/app.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script nonce="swyx">
+			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+			// if (
+			//     localStorage.theme === 'dark' ||
+			//     (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+			// ) {
+			//     document.documentElement.classList.add('dark');
+			// } else {
+			//     document.documentElement.classList.remove('dark');
+			// }
+		</script>
+		%svelte.head%
+	</head>
 
-<head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script nonce="swyx">
-        // On page load or when changing themes, best to add inline in `head` to avoid FOUC
-        if (
-            localStorage.theme === 'dark' ||
-            (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
-        ) {
-            document.documentElement.classList.add('dark');
-        } else {
-            document.documentElement.classList.remove('dark');
-        }
-    </script>
-    %svelte.head%
-</head>
-
-<body class="bg-white dark:bg-gray-900 text-black dark:text-white vsc-initialized">
-    <div id="svelte">%svelte.body%</div>
-</body>
-
+	<body class="bg-white dark:bg-gray-900 text-black dark:text-white vsc-initialized">
+		<div id="svelte">%svelte.body%</div>
+	</body>
 </html>
